cabal-version:       3.0
build-type:          Custom

name:                tlex
version:             0.1.0.0
license:             Apache-2.0 OR MPL-2.0
author:              Mizunashi Mana
maintainer:          mizunashi-mana@noreply.git
copyright:           (c) 2020 Mizunashi Mana

license-file:
    LICENSE
extra-source-files:
    README.md
    CHANGELOG.md

flag develop
    default:     False
    manual:      True
    description: Turn on some options for development

common general
    default-language:
        Haskell2010
    default-extensions:
        NoImplicitPrelude
        BangPatterns
        BlockArguments
        ConstraintKinds
        DataKinds
        DefaultSignatures
        DeriveFoldable
        DeriveFunctor
        DeriveGeneric
        DeriveLift
        DeriveTraversable
        DerivingStrategies
        DerivingVia
        DuplicateRecordFields
        EmptyCase
        FlexibleContexts
        FlexibleInstances
        GADTs
        GeneralisedNewtypeDeriving
        InstanceSigs
        LambdaCase
        MagicHash
        MultiParamTypeClasses
        MultiWayIf
        NamedFieldPuns
        NegativeLiterals
        NumericUnderscores
        OverloadedLabels
        PackageImports
        PatternSynonyms
        PolyKinds
        RankNTypes
        ScopedTypeVariables
        StandaloneDeriving
        Strict
        TypeApplications
        TypeFamilies
        TypeOperators
        UnboxedSums
        UnboxedTuples

    if flag(develop)
        ghc-options:
            -Wall
            -Wcompat
            -Wincomplete-uni-patterns
            -Wmonomorphism-restriction
            -Wpartial-fields

            -fprint-explicit-foralls
            -frefinement-level-hole-fits=1

            -dcore-lint

    build-depends:
        base,
        ghc-prim,
        array,
        bytestring,
        prettyprinter,
        prettyprinter-ansi-terminal,
        text,
        containers,

        -- project depends
        charset,
        template-haskell,

    autogen-modules:
        Paths_tlex
    other-modules:
        Paths_tlex

custom-setup
    setup-depends:
        base,
        Cabal,
        cabal-doctest,

library
    import:
        general,
    hs-source-dirs:
        src
    exposed-modules:
        Language.Lexer.Tlex
        Language.Lexer.Tlex.TH
        Language.Lexer.Tlex.DSL
        Language.Lexer.Tlex.Syntax

        -- internals
        Language.Lexer.Tlex.Prelude
        Language.Lexer.Tlex.Machine.NFA
        Language.Lexer.Tlex.Machine.DFA
        Language.Lexer.Tlex.Pipeline.Pattern2Nfa
        Language.Lexer.Tlex.Pipeline.Nfa2Dfa
        Language.Lexer.Tlex.Data.CharSet
        Language.Lexer.Tlex.Data.Graph
    other-modules:
        Language.Lexer.Tlex.Prelude.Core

test-suite doctest
    import:
        general,
    type:
        exitcode-stdio-1.0
    hs-source-dirs:
        test/doctest
    main-is:
        Doctest.hs
    build-depends:
        doctest,
        QuickCheck,
    autogen-modules:
        Build_doctests
    other-modules:
        Build_doctests

test-suite spec
    import:
        general,
    type:
        exitcode-stdio-1.0
    hs-source-dirs:
        test/spec
    main-is:
        HSpecDriver.hs
    ghc-options:
        -Wno-missing-home-modules
    build-tool-depends:
        hspec-discover:hspec-discover,
    build-depends:
        tlex,

        hspec,
        QuickCheck,
