cabal-version:       3.0
build-type:          Simple

name:                example-haskell2010
version:             0.1.0.0
license:             Apache-2.0 OR MPL-2.0
author:              Mizunashi Mana
maintainer:          mizunashi-mana@noreply.git
copyright:           (c) 2020 Mizunashi Mana

common general
    default-language:
        Haskell2010
    build-depends:
        base,
        bytestring,
        tlex,
        tlex-encoding,
        tlex-th,
        charset,
        enummapset-th,
        template-haskell,
    other-modules:
        Lexer
        -- Lexer.Debug
        Lexer.Rules

executable haskell2010-lexer
    import:
        general
    main-is:
        Main.hs

test-suite spec
    import:
        general
    type:
        exitcode-stdio-1.0
    main-is:
        Spec.hs
    ghc-options:
        -Wno-missing-home-modules
    build-depends:
        hspec,
        QuickCheck,
