cabal-version:       3.0
build-type:          Simple

name:                example-quell
version:             0.1.0.0
license:             Apache-2.0 OR MPL-2.0
author:              Mizunashi Mana
maintainer:          mizunashi-mana@noreply.git
copyright:           (c) 2020 Mizunashi Mana

flag debug
    default:     False
    manual:      True
    description: Turn on some options for debug

common general
    default-language:
        Haskell2010
    default-extensions:
        BlockArguments
    build-depends:
        base,
        bytestring,
        text,
        tlex,
        tlex-encoding,
        tlex-th,
        charset,
        template-haskell,
    if flag(debug)
        build-depends:
            tlex-debug,
            tlex-core,
    other-modules:
        Lexer
        Lexer.Rules
        Lexer.Token
        Lexer.TextId
        Lexer.CodeUnit
    if flag(debug)
        other-modules:
            Lexer.Debug

executable quell-lexer
    import:
        general
    main-is:
        Main.hs

test-suite spec
    import:
        general
    type:
        exitcode-stdio-1.0
    main-is:
        Spec.hs
    ghc-options:
        -Wno-missing-home-modules
    build-depends:
        hspec,
        QuickCheck,
