cabal-version:       3.0
build-type:          Simple

name:                example-small-lang
version:             0.1.0.0
license:             Apache-2.0 OR MPL-2.0
author:              Mizunashi Mana
maintainer:          contact@mizunashi.work
copyright:           (c) 2020 Mizunashi Mana

common general
    default-language:
        Haskell2010
    build-depends:
        base,
        bytestring,
        tlex,
        tlex-encoding,
        tlex-th,
        charset,
        enummapset,
        template-haskell,

        -- for debug
        tlex-core,
        tlex-debug,
    other-modules:
        Lexer
        Lexer.Rules

        -- for debug
        Lexer.Debug

executable small-lang-lexer
    import:
        general
    main-is:
        Main.hs

test-suite spec
    import:
        general
    type:
        exitcode-stdio-1.0
    main-is:
        Spec.hs
    ghc-options:
        -Wno-missing-home-modules
    build-depends:
        hspec,
        QuickCheck,
